--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -1,1 +1,28 @@
-{}
+{"welcome": "Welcome",
+  "create_account": "Create New Account",
+  "username": "Username",
+  "email": "Email",
+  "phone": "Phone Number",
+  "password": "Password",
+  "confirm_password": "Confirm Password",
+  "register": "Register",
+  "rememberMe": "Remember Me",
+  "already_have_account": "Already have an account?",
+  "login": "Login",
+    "moreDetails": "More Details",
+     "viewAll": "View All",
+  "blogs": "Blogs",
+   "services": "Services",
+    "search": "Search...",
+  "introduction": "Subject",
+  "dontHaveAccount": "Don't have an account?",
+  "please_enter_username": "Please enter your name",
+  "please_enter_email": "Please enter your email",
+  "please_enter_valid_email": "Please enter a valid email",
+  "please_enter_phone": "Please enter your phone number",
+  "please_enter_password": "Please enter your password",
+  "password_min_length": "Password must be at least 6 characters",
+  "please_confirm_password": "Please confirm your password",
+  "passwords_do_not_match": "Passwords do not match",
+  "createAccount": "Create an account."
+}
