`Update package name to com.onebillion.devbyeslam in Android, iOS, and macOS projects`

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -16,6 +16,7 @@
   "blogs": "المدونات",
   "services": "الخدمات",
    "search": "ابحث...",
+  "please_login_first": "من فضلك سجل دخول اولا",
   "rememberMe": "تذكرني",
   "login": "تسجيل الدخول",
   "please_enter_username": "من فضلك أدخل الاسم",
