--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -14,6 +14,7 @@
   "blogs": "Blogs",
    "services": "Services",
     "search": "Search...",
+  "please_login_first": "Please Login First",
   "introduction": "Subject",
   "dontHaveAccount": "Don't have an account?",
   "please_enter_username": "Please enter your name",
