`Updated translations, fixed login screen, and improved profile screen`

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -15,6 +15,8 @@
      "viewAll": "عرض الكل",
   "blogs": "المدونات",
   "services": "الخدمات",
+  "logoutSuccess": "✅ تم تسجيل الخروج بنجاح",
+  "signOut": "تسجيل الخروج",
    "search": "ابحث...",
   "please_login_first": "من فضلك سجل دخول اولا",
   "rememberMe": "تذكرني",
@@ -36,5 +38,23 @@
   "save_data":"حفظ البيانات",
   "Edit_data":"تعديل البيانات",
   "Please_log_in_first_to_access_our_exclusive_services":"قم بتسجيل الدخول عندنا اولا لتحصل على الخدمات الخاصة بينا"
+
+,
+
+"login_success": "✅ تم تسجيل الدخول بنجاح!",
+  "user_not_found": "❌ لم يتم العثور على مستخدم بهذا البريد الإلكتروني.",
+  "wrong_password": "❌ كلمة المرور غير صحيحة.",
+  "invalid_email": "❌ عنوان البريد الإلكتروني غير صالح.",
+  "user_disabled": "❌ تم تعطيل حساب هذا المستخدم.",
+  "too_many_requests": "❌ محاولات كثيرة جدًا. يرجى المحاولة لاحقًا.",
+  "network_request_failed": "❌ لا يوجد اتصال بالإنترنت.",
+  "default_error": "❌ البريد الإلكتروني أو كلمة المرور غير صحيحة. حاول مرة أخرى.",
+  "unexpected_error": "❌ حدث خطأ غير متوقع.",
+
+  "home": "الرئيسية",
+  
+  "blog": "المدونة",
+  "profile": "الشخصيه"
+
 
 }
