`Added "enjoy" translations and updated usage in home screen`

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -1,5 +1,6 @@
 {
      "createAccount": "إنشاء حساب.",
+     "enjoy" : "استمتع",
      "deleteAccount": "حذف الحساب",
     "welcome": "مرحبًا بك",
   "create_account": "إنشاء حساب جديد",
