`feat: Added sections feature and related code changes`

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -33,5 +33,6 @@
   "The_data_has_been_successfully_updated":"The data has been successfully updated!",
   "save_data":"Save Data",
   "Edit_data":"Edit Data",
-  "Please_log_in_first_to_access_our_exclusive_services":"Please log in first to access our exclusive services"
+  "Please_log_in_first_to_access_our_exclusive_services":"Please log in first to access our exclusive services",
+  "Sections":"Sections"
 }
