--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -34,6 +34,7 @@
   "The_data_has_been_successfully_updated":"تم تحديث البيانات بنجاح!",
   "save_data":"حفظ البيانات",
   "Edit_data":"تعديل البيانات",
-  "Please_log_in_first_to_access_our_exclusive_services":"قم بتسجيل الدخول عندنا اولا لتحصل على الخدمات الخاصة بينا"
+  "Please_log_in_first_to_access_our_exclusive_services":"قم بتسجيل الدخول عندنا اولا لتحصل على الخدمات الخاصة بينا",
+  "Sections":"الاقسام"
 
 }
