`Added Sections feature to Home screen and updated navigation bar items`

--- a/lib/l10n/intl_ar.arb
+++ b/lib/l10n/intl_ar.arb
@@ -60,7 +60,7 @@
   "unexpected_error": "❌ حدث خطأ غير متوقع.",
 
   "home": "الرئيسية",
-  
+  "Sections":"الاقسام",
   "blog": "المدونة",
   "profile": "الشخصيه"
 
