--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -62,6 +62,7 @@
 
 "enjoy" : "Enjoy",
 
-   "deleteAccount": "Delete Account"
+   "deleteAccount": "Delete Account",
+   "Sections":"Sections"
 
 }
